# wg-ldap

./: Cargo.toml  LICENSE  README.md  example-config.toml  wg-example.ldif  wg-ldap.service  wg-ldap.timer  wg-schema.ldif
src/: config.rs  error.rs  ldap.rs  main.rs  peer.rs
