[package]
name = "wg-ldap"
version = "0.1.0"
edition = "2021"

[dependencies]
base64 = "0.22.0"
wireguard-uapi = "3.0.0"
thiserror = "1.0.58"
toml = "0.8.12"
native-tls = "0.2.11"

[dependencies.ldap3]
version = "0.11.3"
features = ["gssapi"]

[dependencies.serde]
version = "1.0.197"
features = ["derive"]

[dependencies.url]
version = "2.5.0"
features = ["serde"]
